# local-llm

./: .gitignore  Makefile  README.md  meta.json  pyproject.toml  run.sh  setup.sh
examples/: client.py
src/local_llm/: __init__.py  __main__.py  llm.py
